# travel-chatbot

./: README.md  app.py  app_environment.py  db.py  docker-compose.yml  env.py  note.md  pyproject.toml
agents/: agent_tour.py  agent_tour_info.py  agent_tour_location.py  agent_tour_price.py  agent_tour_schedule.py
alembic/: env.py
controllers/: admin.py  agent_tour.py  agent_tour_info.py  agent_tour_location.py  agent_tour_price.py  agent_tour_schedule.py  appointments.py  chat.py  chatbot.py  departure_schedule.py  doctors.py  file.py  message.py  price_by_date.py  price_by_package.py  recurring_schedule.py  specific_departure.py  tour.py  tour_departure.py  tour_destination.py  tour_highlight_location.py  tour_type.py  upload_file.py  upload_file_agent.py  user.py  visa_price.py
models/: admin.py  appointments.py  chat.py  departments.py  departure_schedule.py  doctors.py  file.py  message.py  price_by_date.py  price_by_package.py  recurring_schedule.py  schedules.py  services.py  specific_departure.py  tour.py  tour_departure.py  tour_destination.py  tour_highlight_location.py  tour_type.py  user.py  visa_price.py
repositories/: admin.py  agent_tour.py  agent_tour_info.py  agent_tour_location.py  agent_tour_price.py  agent_tour_schedule.py  appointments.py  chat.py  departure_schedule.py  doctors.py  file.py  message.py  price_by_date.py  price_by_package.py  recurring_schedule.py  specific_departure.py  tour.py  tour_departure.py  tour_destination.py  tour_highlight_location.py  tour_type.py  user.py  visa_price.py
services/: admin.py  agent_tour.py  chat.py  (+20 more)
(+20 files in other folders)
